# typetype

./: .gitignore  .qmllint.ini  .qmlls.ini  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  PROJECT_DOCUMENTATION.md  README.md  TypeType_Server_API_Documentation.md  main.py  pyproject.toml  pysidedeploy.spec  resources.qrc
.claude/: settings.local.json
.github/workflows/: build-release.yml  ci.yml  multi-platform-tests.yml
RinUI/: LOCAL_MODIFICATIONS.md  README.md  qmldir
RinUI/components/: Icon.qml
RinUI/components/BasicInput/: Button.qml
RinUI/components/Navigation/: NavigationBar.qml  NavigationView.qml
RinUI/config/: rin_ui.json
RinUI/core/: __init__.py  config.py  theme.py
RinUI/windows/: CtrlBtn.qml  FluentPage.qml  TitleBar.qml
config/: config.example.json
docs/: ARCHITECTURE.md  CHANGELOG.md  DEVELOPING.md  README.md  SPRING_BOOT.md  developer-architecture-handbook.md  guide.md  roadmap.md  spring-boot-backend-design.md  unfixed-bugs-2026-04-15.md
docs/decisions/: 001-unified-low-memory-text-loading.md  004-slice-typing-mechanism.md  README.md
docs/examples/: README.md
docs/guides/: README.md  adding-new-feature.md
docs/history/: 2026-04-21-slice-typing-design-v1.md  README.md  ai-agent-plan.md  fix-icon-behavior-on-color.md  fix-score-upload-summary.md  fix-slice-cursor-and-pass-count.md  jwt-timer-refresh-design.md  keyboard-listener-enhancement.md  leaderboard-design.md  spring-boot-design.md  ubuntu24-wayland-fcitx5-and-nuitka-coredump.md  unfixed-bugs-2026-04-15.md  unfixed-performance-memory-2026-04-26.md
docs/meta/: README.md
docs/reference/: README.md  api-endpoints.md  bridge-slots.md  config.md  qingfa-qq-group-integration.md  qml-pages.md  typing-metrics.md
docs/superpowers/plans/: 2026-04-19-weak-chars-custom-sort.md  2026-04-24-slice-config-redesign.md  2026-04-25-score-format-unification.md  2026-04-26-client-server-score-contract-alignment.md
docs/superpowers/specs/: 2026-04-13-jwt-timer-refresh-design.md  2026-04-20-backspace-correction-stats-design.md  2026-04-21-slice-typing-design.md  2026-04-22-session-context-design.md  2026-04-24-slice-config-dialog-redesign.md  2026-04-25-score-format-unification-design.md
resources/texts/: builtin_demo.txt  打词必备单字.txt
resources/trainer/: 12.合集2-1501-3500.txt  13.合集3-前4000.txt  15.常用词3000.txt  17.要你命4500.txt  18.english.txt  4.1501-2000.txt  5.2001-2500.txt  6.2501-3000.txt  7.3001-3500.txt  8.3501-4000.txt  9.4001-4500.txt
resources/ziti/: 小鹤字提.txt
scripts/: verify-framework.sh
skills/typetype-adding-feature/: SKILL.md
skills/typetype-architecture/: SKILL.md
skills/typetype-coding-standards/: SKILL.md
skills/typetype-development/: SKILL.md
skills/typetype-docs-sync/: SKILL.md
src/backend/: Crypt.py  GetSaiWen.py  SystemIdentyfier.py  backend.py  bridge.py  crypt.py  get_sai_wen.py  score_data.py  system_identifier.py  text_properties.py
src/backend/application/: __init__.py  session_context.py
src/backend/config/: app_paths.py  container.py  font_setup.py  runtime_config.py  text_source_config.py
src/backend/core/: api_client.py  network_errors.py
src/backend/domain/: auth_service.py  char_stats_service.py  text_load_service.py  typing_service.py
src/backend/infrastructure/: api_client.py
src/backend/integration/: api_client_auth_provider.py  api_client_score_submitter.py  catalog_service.py  file_font_repository.py  file_local_article_repository.py  file_segment_provider.py  file_trainer_repository.py  file_ziti_repository.py  global_key_listener.py  in_memory_segment_provider.py  json_typing_totals_store.py  key_listener_factory.py  leaderboard_fetcher.py  llm_text_provider.py  local_text_loader.py  mac_key_listener.py  noop_char_stats_repository.py  qt_async_executor.py  qt_local_text_loader.py  remote_catalog_text_fetcher.py  remote_text_provider.py  sai_wen_text_fetcher.py  secure_token_store.py  slice_metrics_prefs_store.py  sqlite_char_stats_repository.py  text_slice_progress_store.py  text_uploader.py  wenlai_provider.py
src/backend/models/: char_stats.py  score_dto.py  text_source.py
src/backend/ports/: __init__.py  auth_provider.py  char_stats_repository.py  font_repository.py  key_codes.py  key_listener.py  local_article_repository.py  score_submitter.py  text_provider.py  text_segment_provider.py  text_uploader.py  token_store.py  trainer_repository.py  typing_totals_store.py  wenlai_provider.py  ziti_repository.py
src/backend/presentation/: bridge.py  text_load_coordinator.py
src/backend/security/: crypt.py  secure_storage.py
src/backend/services/: sai_wen_service.py
src/backend/typing/: score_data.py
src/backend/utils/: logger.py  text_id.py
src/backend/workers/: __init__.py  ai_text_worker.py  base_worker.py  char_stat_flush_worker.py  char_stats_worker.py  leaderboard_worker.py  load_text_worker.py  local_article_worker.py  session_stat_worker.py  text_content_worker.py  trainer_worker.py  (+4 more)
src/qml/: AppText.qml  EndDialog.qml  HistoryArea.qml  LowerPane.qml  Main.qml  ScoreArea.qml  ToolLine.qml  UpperPane.qml  qmldir
tests/: test_ai_text_adapter.py  test_api_client.py  test_api_client_score_submitter.py  test_app_paths.py  test_auth_service.py  test_backend.py  test_char_stats_adapter.py  test_char_stats_repository.py  test_char_stats_sorting.py  test_crypt.py  test_generate_ai_text_usecase.py  test_get_sai_wen.py  test_global_key_listener.py  test_key_listener_factory.py  test_leaderboard_adapter.py  test_llm_text_provider.py  test_local_article_adapter.py  test_local_article_repository.py  test_local_article_usecase.py  test_logger.py  test_mac_key_listener.py  test_qml_pages.py  test_qml_shortcuts.py  test_remote_text_provider.py  test_runtime_config.py  test_sai_wen_service.py  test_sai_wen_text_fetcher.py  test_score_data.py  test_score_dto.py  test_score_usecase.py  test_secure_storage.py  test_session_context.py  test_session_stat.py  test_slice_typing.py  test_slow_entries.py  test_system_identifier.py  test_text_adapter.py  test_text_filter_service.py  test_text_loading_closure.py  test_text_session_usecase.py  (+16 more)
(+97 files in other folders)
