[project]
name = "typetype"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "elevate>=0.1.3",
    "evdev>=1.9.2; platform_system == 'Linux'",
    "httpx>=0.28.1",
    "pycryptodome>=3.23.0",
    "pyside6>=6.10.2",
    "qasync>=0.28.0",
]

[tool.pyside6-project]
files = [
    "main.py",
    "src/qml/Main.qml",
    "src/qml/UpperPane.qml",
    "src/qml/LowerPane.qml",
    "src/qml/ScoreArea.qml",
    "src/qml/ToolLine.qml",
    "src/qml/AppText.qml",
    "src/qml/HistoryArea.qml",
    "src/qml/EndDialog.qml",
    "src/backend/backend.py",
    "src/backend/security/crypt.py",
    "src/backend/integration/global_key_listener.py",
    "src/backend/integration/system_identifier.py",
    "src/backend/text_properties.py",
    "src/backend/application/usecases/score_usecase.py",
    "src/backend/application/usecases/text_usecase.py",
    "src/backend/core/api_client.py",
    "src/backend/services/sai_wen_service.py",
    "src/backend/typing/score_data.py",
    "src/backend/models/score_dto.py",
]

[[tool.uv.index]]
name = "tencent"
url = "https://mirrors.cloud.tencent.com/pypi/simple/"
